--- a/style.css
+++ b/style.css
@@ -1,63 +1,53 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&ffamily=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
-	margin: 0;
 	font-family: 'Montserrat', sans-serif;
-	border-top: 10px solid #014B62;
-	border-bottom: 0px solid #014B62;
 	color: black;
+	margin: 0;
 }
 h1, h2{
-	color: lightsalmon;
+	font-family: 'Raleway', sans-serif;
+	color: orange;
 }
 
 h1{
 	text-align: center;
-	font-size: 3em;
+	font-size: 2em;
 }
 h2{
-	text-align: left;
-	font-size: 2em;
-	border-bottom: 2px darkgray; solid;
-}
-h3{
-	color: lightsalmon;
-	text-align: left;
-	font-size: 1.5em;
-	padding-top: 50px;
-}
-h4{
-	color: black;
-	text-align: center;
-	font-size: 1.5em;
-}
-h6{
-	color: lightsalmon;
-	text-align: left;
-	font-size: 0.8em;
-}
-h5{
-	color: lightsalmon;
 	text-align: center;
 	font-size: 2em;
+	background-color: deeppink;
+	border-bottom: 2px black solid;
+}
+.picture{
+	background-color: 2px solid deeppink;
+	border: 2px solid orange;
+	padding: 4px;
+	margin: 8px 0 0 20px;
+	height: 200px;
+  	width: 200px;
+  	background: orange;
+  	float: right;
 }
 a:link{
-	color: lightsalmon;
+color: black;
 }
 a:visited{
-	color: brown;
+color: pink;
 }
 a:hover{
-	color: darkgrey;
+color: orange;
 }
 a:active{
-	color: black;
+color: black;
 }
 nav{
-	background-color: lightsalmon;
+	background-color: deeppink;
+	border-top: 2px orange solid;
+	border-bottom: 2px orange solid;
 	padding: 5px;
 	height: 30px;
-	text-align: center;
 }
 nav ul{
 	list-style-type: none;
@@ -71,20 +61,26 @@ nav a{
 	padding-right: 10px;
 }
 nav a:link{
-	color: brown;
+	color: orange;
 }
 nav a:visited{
-	color: blanchedalmond;
+	color: black;
 }
 nav a:hover{
-	color: yellow;
+	color: white;
 }
 nav a:active{
-	color: burlywood;
+	color: darkgray;
 }
 main{
-	max-width: 800px;
+	max-width: 1000px;
 	margin: 20px auto;
+}
+footer{
+	text-align: center;
+	padding: 10px;
+	background: rgb(253,29,220);
+	background: linear-gradient(90deg, rgba(253,29,220,0.8646052170868348) 11%, rgba(252,122,69,1) 100%);
 }
 /* CSS for Tablets */
 
@@ -102,193 +98,99 @@ main{
 	}
 }
 
+.logo{
+	display: block;
+	max-width: 400px;
+	height: auto;
+	margin:0 auto;
+}
+
 #home-hero{
-	background-image: url(images/art-7537962_1280.jpg);
+	background-image: url(images/guitars.jpg);
 	height: 300px;
 	background-size: cover; 
 	background-repeat: no-repeat;
-	padding-top: 15px;
 }
 #home-hero h1{
-	color: blanchedalmond;
-	font-size: 60px;
-	text-shadow: 2px 2px 2px black;
 	text-align: center;
-	padding: 50px 0;
-	margin: 0; 
+	color: deeppink;
+	text-shadow: 2px 2px 2px black; 
+	margin: 0;
+	padding: 10px;
+	background-color: rgba(0,0,0, .5);
 }
-.home-photo{
-	float: right;
-	max-width: 100px;
-	height: auto;
-}
-head {
-	canvas {
-    border: 1px solid #d3d3d3;
-    background-color: #f1f1f1;
- }
-}
-script {
-	canvas {
-	background-image: hearts.jpg;
-	background-repeat: no-repeat;
-  	background-attachment: fixed;
-  	background-size: cover;
-  	border: 1px solid #d3d3d3;
-  }
-}
-button {
-	margin-top: 12px;
-	background-color: lightsalmon;
-	color: white;
-	border: none;
-	padding: 8px 16px;
-	border-radius: 5px;
-}
-.logo{
-	display: block;
-	margin:0 auto;
-}
-.image{
-	border-radius: 100%;
+
+table{
+	border-collapse: collapse;
+	margin: 0 auto;
 	border: 5px solid #000000;
-	display: block;
-	margin: 0 auto;
 }
-header{
-	margin: center;
+tr:nth-child(even) {
+	background-color: #eeeeee;
 }
-footer{
-	clear: both;
-	background-image: url(images/art-7537962_1280.jpg);
-	text-align: center;
-	border-top: 1px solid gray;
+th{
+	background-color:deeppink;
+	color: orange; 
+	padding: 10px; 
+	border-bottom:3px solid #000000;
+}
+td{
+	border: 1px solid #dddddd;
 	padding: 10px;
-	font-size: 1em;
-	background-size: cover;
 }
-small{
+label{
+	width: 8em;
+	padding-right: 1em;
 	text-align: center;
-	padding: 10px;
-	font-size: .8em;
-	background-size: cover;
-	color: lightsalmon;
-}
-.container-fluid{
-	max-width: 100%;
-	display: block;
-	background-size: cover;
-	background-position: center;
-	color: #042837;
-	padding: 10px 10px 10px 30px;
-}
-.blockquote{
-    background-color: #eeeeee;
-    border-left: 10px solid gray;
-    padding: 30px;
-}
-.img{
-	border-radius: 50%;
-	display: block;
-	margin: 0 auto;
-	background-size: cover;
-}
-.fa{
-	font-size: 1.5em;
-	color: black;
-	text-align: center;
-}
-.row .col-sm-12{
-    width: 100%;
-    height: auto;
-    text-align: center;
-    color: white;
-    background-size: cover;
-    padding-top: 10px;
-    background-color: black;
-}
-
-.row .row-thumbnails img {
-    width: 100px;
-    height: 75px;
-    margin: 3px 10px 10px 0;
-}
-
-.row .row-thumbnails img:hover {
-    opacity: 0.8;
-    cursor: pointer;
-}
-
-.row .col-sm-12 img#col-sm-12 {
-    padding: 1px;
-    max-width: 100%;
-    height: auto;
-    margin: 0 auto;
-    display: block;
-    text-align: center;
-    padding-top: 50px;
-    background-color: black;
-}
-.row .col-sm-6{
-    width: 100%;
-    height: auto;
-}
-.row .col-sm-6 img#col-sm-6 {
-    padding: 1px;
-    max-width: 100%;
-    height: auto;
-    margin: 0 auto;
-    display: block;
-    border-bottom: 2px solid black;
-}
-.row .col-sm-4{
-    width: 100%;
-    height: auto;
-    border-bottom: 2px solid darkgray;
-    padding-bottom: 50px;
-}
-.row .col-sm-4 img#col-sm-4 {
-    padding: 1px;
-    max-width: 100%;
-    height: auto;
-    margin: 0 auto;
-    display: block;
-    border-bottom: 2px solid darkgray;
-    padding-bottom: 50px;
-}
+} 
 input, textarea{
 	margin-bottom: 1em;
 	display: block;
 	margin: 0 auto;
 	border: 1px solid #000000;
-	height: 30px;
+	height: 20px;
 	float: center;
 }
 input[type=submit]{
 	display: block;
-	background-color: lightsalmon;
+	background-color: orange;
 	border-radius: 10px;
 	margin: 0 auto;
-	height: 30px;
-	border-color: black;
-	color: blanchedalmond;
+	height: 20px;
+	border-color: deeppink;
 }
-.mobile{
-	display:none;
+form{
+	max-width: 300px;
+	margin: 0 auto;
+	border: 5px solid #000000;
+	background-color: #eeeeee;
+	text-align: center;
 }
-@media only screen and (max-width: 768px){
-	.desktop{
-		display:none;
-	}
-	.mobile{
-		display: block;
-		touch-action: manipulation;
-	}
+header{
+	background: rgb(253,29,220);
+	background: linear-gradient(90deg, rgba(253,29,220,0.8646052170868348) 11%, rgba(252,122,69,1) 100%);
 }
-main{
-	border-left: 3px solid lightgrey;
-	padding-left: 30px;
+.video-container {
+    overflow: hidden;
+    position: relative;
+    width:100%;
 }
+
+.video-container::after {
+    padding-top: 56.25%;
+    display: block;
+    content: '';
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
 
 
 
